--- a/HeadControl/app/src/main/res/layout/fragment_title.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_title.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical">
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="match_parent"
-        android:background="@color/btn_true"
+        android:background="@mipmap/zuolan"
         android:fadingEdge="none">
 
         <LinearLayout
@@ -16,14 +16,14 @@
             android:gravity="center_vertical"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <!--<RelativeLayout
                 android:id="@+id/rl_Exit"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="28dp"
+                android:background="@mipmap/dingbu"
                 android:clickable="true"
-                android:orientation="horizontal"
-                android:background="@color/btn_true"
-                >
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/iv_Exit"
                     android:layout_width="wrap_content"
@@ -33,19 +33,21 @@
                     android:layout_gravity="right"
                     android:layout_marginLeft="8dp"
                     android:clickable="true"
-                    android:src="@mipmap/tuichu"/>
+                    android:src="@mipmap/tuichu"
+                    android:visibility="gone" />
+
                 <TextView
                     android:id="@+id/tv_Exit"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
+                    android:layout_height="28dp"
                     android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:text="设置"
-                    android:textSize="12.0sp"
+                    android:text="嘟嘟机器人操作系统V1.0"
                     android:textColor="@color/white"
-                    />
-            </RelativeLayout>
+                    android:textSize="12sp" />
+            </RelativeLayout>-->
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.2dp"
@@ -53,40 +55,21 @@
 
             <RelativeLayout
                 android:id="@+id/rl_Battery"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:clickable="true"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@color/btn_true"
-                >
+                android:clickable="true">
+
+
                 <ImageView
                     android:id="@+id/iv_Battery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
+                    android:layout_width="234dp"
+                    android:layout_height="159dp"
                     android:layout_gravity="left"
                     android:clickable="true"
-                    android:src="@mipmap/dianyuan_per" />
-                <TextView
-                    android:id="@+id/tv_Battery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="80dp"
-                    android:gravity="center_vertical"
-                    android:text="电源"
-                    android:textColor="@color/left_text_color"
-                    android:textSize="11.0sp" />
-                <ImageView
-                    android:id="@+id/iv_Battery_you"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="right"
-                    android:clickable="true"
-                    android:src="@mipmap/you_per" />
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/dianyuan_pre" />
+
             </RelativeLayout>
 
             <View
@@ -96,43 +79,22 @@
 
             <RelativeLayout
                 android:id="@+id/rl_Clean"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:clickable="true"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/btn_background"
-                >
+                android:clickable="true">
 
                 <ImageView
                     android:id="@+id/iv_Clean"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="left"
+                    android:layout_width="234dp"
+                    android:layout_height="159dp"
                     android:clickable="true"
-                    android:src="@mipmap/qingjie_no"
-                    />
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/qingjie_no" />
+                <!--*******************************************************************-->
 
-                <TextView
-                    android:id="@+id/tv_Clean"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="80dp"
-                    android:gravity="center_vertical"
-                    android:text="清洁"
-                    android:textColor="@color/left_text_color"
-                    android:textSize="11.0sp" />
-                <ImageView
-                    android:id="@+id/iv_Clean_you"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="right"
-                    android:clickable="true"
-                    android:src="@mipmap/you_no"  />
+
+                <!--*******************************************************************-->
             </RelativeLayout>
 
             <View
@@ -142,33 +104,23 @@
 
             <RelativeLayout
                 android:id="@+id/rl_Map"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:clickable="true"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/btn_background"
-                >
+                android:clickable="true">
+
                 <ImageView
                     android:id="@+id/iv_Map"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="234dp"
+                    android:layout_height="159dp"
                     android:layout_centerVertical="true"
                     android:layout_gravity="left"
                     android:clickable="true"
-                    android:src="@mipmap/qingjie_no"
-                    android:visibility="visible"
-                    />
-                <TextView
-                    android:id="@+id/tv_Map"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="80dp"
-                    android:gravity="center_vertical"
-                    android:text="地图"
-                    android:textColor="@color/left_text_color"
-                    android:textSize="11.0sp" />
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/ditu_no"
+                    android:visibility="visible" />
+
+
                 <ImageView
                     android:id="@+id/iv_Map_you"
                     android:layout_width="wrap_content"
@@ -177,9 +129,55 @@
                     android:layout_centerVertical="true"
                     android:layout_gravity="right"
                     android:clickable="true"
-                    android:src="@mipmap/you_no"  />
+                    android:src="@mipmap/you_no"
+                    android:visibility="gone" />
+                <!--*******************************************************************-->
             </RelativeLayout>
 
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.2dp"
+                android:background="@color/divider_line" />
+
+            <RelativeLayout
+                android:id="@+id/rl_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_background"
+                android:clickable="true">
+
+                <ImageView
+                    android:id="@+id/iv_settings"
+                    android:layout_width="234dp"
+                    android:layout_height="159dp"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/shezhi_no"
+                    android:visibility="visible" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_background"
+                android:layout_marginTop="280dp"
+                android:clickable="true">
+
+                <ImageView
+                    android:id="@+id/iv_Map1"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/shouqi"
+                    android:layout_centerHorizontal="true"
+                    android:visibility="visible" />
+            </RelativeLayout>
         </LinearLayout>
 
     </ScrollView>
